[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cumulus-migration-dependencies"
version = "0.1.0"
description = ""
authors = ["Michael Brandt <mbrandt@colorado.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
PyYAML = "^5.4.1"
types-PyYAML = "^5.4.3"
pip = "^21.2.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
flake8-comprehensions = "^3.5.0"
flake8-debugger = "^4.0.0"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-pep3101 = "^1.3.0"
flake8-quotes = "^3.2.0"
flake8-string-format = "^0.3.0"
isort = "^5.9.3"
mypy = "^0.910"
mypy-extensions = "^0.4.3"
pep8-naming = "^0.12.0"
pip = "^21.1"
pytest = "^6.2.4"
safety = "^1.10.3"

[tool.black]
line-length = 100
skip-string-normalization = true
